--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <link href="style.css" rel="stylesheet" />
   </head>
   <body>
-    <canvas id="myCanvas"></canvas>
+    <canvas id="carCanvas"></canvas>
+    <canvas id="networkCanvas"></canvas>
+    <script src="visualizer.js"></script>
     <script src="network.js"></script>
 
     <script src="sensor.js"></script>
